@@ -2,17 +2,24 @@
 
 PKG=musica
 DIR=/usr/share/$PKG/music
+f=$(mktemp)
 
 cd "$DIR"
 
 # Get Songs
-find . -type f -iname "*.mp3" -o -iname "*.oga" -o -iname "*.ogg" -o -iname "*.wav" -o -iname "*.flac" | sed "s:^\./::" > /var/lib/$PKG/songs
+find . -type f -iname "*.mp3" -o -iname "*.oga" -o -iname "*.ogg" -o -iname "*.wav" -o -iname "*.flac" | sed "s:^\./::" | sort -u > $f
+chmod 644 $f
+mv -f "$f" /var/lib/$PKG/songs
 wc -l /var/lib/$PKG/songs | awk '{print $1}' > /var/lib/$PKG/songs.count
 
 # Get Albums
-awk -F/ '{print $2}' /var/lib/$PKG/songs | sort -u > /var/lib/$PKG/albums
+find . -type d | sed "s:^\./::" | grep "/" | sort -u > $f
+chmod 644 $f
+mv -f $f /var/lib/$PKG/albums
 wc -l /var/lib/$PKG/albums | awk '{print $1}' > /var/lib/$PKG/albums.count
 
 # Get Artists
-awk -F/ '{print $1}' /var/lib/$PKG/songs | sort -u > /var/lib/$PKG/artists
+find . -maxdepth 1 -type d | sed "s:^\./::" | sort -u > $f
+chmod 644 $f
+mv -f $f /var/lib/$PKG/artists
 wc -l /var/lib/$PKG/artists | awk '{print $1}' > /var/lib/$PKG/artists.count
