@@ -1,6 +1,11 @@
 musica (2.16) unreleased; urgency=low
 
-  * UNRELEASED
+  * debian/cron.hourly, index.php: LP: #622294
+    - VASTLY improve album and song search performance by using the cache
+      files listing songs/albums
+    - artist lookup is still fast enough doing the dir work, though could
+      be changed too, easily
+    - improve the cronjob that generates these to the correct format
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 12 Mar 2011 05:55:54 +0000
 
